<resources>
    <string name="app_name">Version Update</string>
    <string name="jjdxm_update_action_pause">暂停</string>
    <string name="jjdxm_update_action_continue">继续</string>
    <string name="jjdxm_update_action_cancel">取消</string>
    <string name="jjdxm_update_updatetitle">发现新版本</string>
    <string name="jjdxm_update_newversion">最新版本: </string>
    <string name="jjdxm_update_updatecontent">更新内容</string>
    <string name="jjdxm_update_targetsize">新版本大小: </string>
    <string name="jjdxm_update_gprscondition">(提示: 非WIFI环境)</string>
    <string name="jjdxm_update_updatenow">立即更新</string>
    <string name="jjdxm_update_installnow">立即安装</string>
    <string name="jjdxm_update_notnow">以后再说</string>
    <string name="jjdxm_update_ignore">忽略该版</string>
    <string name="jjdxm_update_dialog_installapk">最新版本已下载, 是否安装 ?</string>
</resources>
